// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chevron should handle the direction correctly and change the icon 1`] = `
<div
  className="chevron-button "
  onClick={[Function]}
>
  <Icon
    color="gray-600"
    name="chevronRight"
  />
</div>
`;

exports[`Chevron should have the defaut left chevron direction icon 1`] = `
<div
  className="chevron-button "
  onClick={[Function]}
>
  <Icon
    color="gray-600"
    name="chevronLeft"
  />
</div>
`;

exports[`Chevron should render correctly 1`] = `
<div
  className="chevron-button "
  onClick={[Function]}
>
  <Icon
    color="gray-600"
    name="chevronLeft"
  />
</div>
`;
